<resources>
    <string name="banner_ad_unit_id">ca-app-pub-6661608223237465~6859209248</string>

    <string name="app_name">My Stock</string>

    <string name="nome_do_produto">Nome do Produto</string>
    <string name="produtos">Produtos</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="valor">Valor Unit.</string>
    <string name="quantidade">Quant.</string>
    <string name="codigo_de_barras">Codigo de Barras:</string>
    <string name="dot">...</string>
    <string name="e_mail">e-mail :</string>
    <string name="password">Password :</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_up">Sing Up</string>
    <string name="cpf">CPF</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nome">Nome</string>
    <string name="entrar_em_uma_loja">Entrar em uma Loja</string>
    <string name="cadastrar_minha_loja">Cadastrar minha Loja</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_up">cadastrar - se</string>
    <string name="nome_da_loja">Nome da Loja</string>
    <string name="cnpj">CNPJ</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="repor_estoque">Repor Estoque</string>
    <string name="vender">Vender</string>
    <string name="meu_estoque">Meu Estoque</string>
    <string name="icone_do_estoque">icone do estoque</string>
    <string name="efetuar_venda">Efetuar Venda</string>
    <string name="icone_de_venda">icone de venda</string>
    <string name="cadastrar_passoa">Cadastrar</string>
    <string name="logo_marca">Logo Marca</string>
    <string name="plano_free">Plano: free</string>
    <string name="ol_fulano_de_tals">Olá</string>
    <string name="imagem_do_usuario_talvez_so_um_string_icone_de_venda">imagem do usuario talvez so um @string/icone_de_venda</string>
    <string name="sair">Sair</string>
    <string name="imagen_de_sair_do_app">Imagen de sair do app</string>
    <string name="concluir_venda">Concluir Venda</string>
    <string name="cancelar_venda">Cancelar Venda</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="quantidadee">Quantidade</string>
    <string name="itens_do_carrinho">Itens do Carrinho</string>
    <string name="rs">R$ 0,00</string>
    <string name="central_de_ajuda_e_suporte">Central de Ajuda e Suporte</string>
    <string name="grmachado12_hotmail_com">Email: axesoft21@gmail.com</string>
    <string name="email">Email:</string>
    <string name="whattsup_55_95_98122_0021">Whattsup: +55 (95) 98122-0021</string>
    <string name="novo_produto">Novo Produto</string>
    <string name="imagen_de_camera_para_escanera_codigo">imagen de camera para escanera codigo</string>
    <string name="imagem_da_splash_screm">Imagem da splash screm</string>
    <string name="r_00_00">R$ 00,00</string>
    <string name="alterar_quantidade">Alterar Quantidade</string>
    <string name="alterar_valor">Alterar Valor</string>
</resources>
