<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/backgrond_1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_of_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/imagem_do_usuario_talvez_so_um_string_icone_de_venda"
            app:srcCompat="@mipmap/ic_person" />

        <LinearLayout
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ol_fulano_de_tals"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plano_status_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plano_free" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_go_out"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/imagen_de_sair_do_app"
            app:srcCompat="@drawable/ic_exit_to_app_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/meu_estoque"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/round_corners"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageView
            android:id="@+id/meu_estoque_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/icone_do_estoque"
            app:srcCompat="@mipmap/ic_meu_estoque" />

        <TextView
            android:id="@+id/meu_estoque_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/meu_estoque"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/efetuar_venda"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/round_corners"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meu_estoque">

        <ImageView
            android:id="@+id/efetuar_venda_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/icone_de_venda"
            app:srcCompat="@mipmap/ic_efetuar_venda" />

        <TextView
            android:id="@+id/efetuar_venda_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/efetuar_venda"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="ca-app-pub-6661608223237465/7854444991"
        ads:layout_constraintTop_toBottomOf="@+id/meu_estoque"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>