<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alt_quant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/alterar_quantidade"
        app:layout_constraintStart_toStartOf="@+id/numPicker"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/numPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/alt_quant"
        tools:layout_editor_absoluteX="8dp"></NumberPicker>

    <TextView
        android:id="@+id/alt_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/alterar_valor"
        app:layout_constraintBottom_toTopOf="@+id/altera_valor"
        app:layout_constraintStart_toStartOf="@+id/altera_valor"
        app:layout_constraintTop_toBottomOf="@+id/numPicker" />

    <EditText
        android:id="@+id/altera_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/r_00_00"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alt_valor"
        tools:targetApi="o" />

</android.support.constraint.ConstraintLayout>